[project]
name = "claude-times"
version = "1.0.0"
description = "Analyze Claude Code sessions, token usage, tools, and estimated API costs."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="J. Fernando Gallarday V." }
]
license = { text = "AGPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0"
]

[project.scripts]
claude-times = "claude_times.cli:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]